# mondo-hawk

./: .gitignore  .travis.yml  LICENSE  README.md  deploy.sh  index.html  install-maven-deps.sh  model_manipulations.eol  orientdb-versions.txt  pom-plain.xml  pom-server-plain.xml  pom.xml  readme.txt
_hawk_runtime_example/: .classpath  .gitignore  .project  pom-plain.xml
docs/: .gitignore  platform_deployment.graphml
docs/org.hawk.examples.cpp/: CMakeLists.txt  README.md  build.sh  eclipse.sh  example.cpp
features/: pom.xml
hawk-updates/: artifacts.xml.xz  content.xml.xz  p2.index
org.hawk.arangodb/: .classpath  .project  build.properties  ivy.xml
org.hawk.arangodb.tests/: .project
org.hawk.bpmn/: plugin.xml  pom-plain.xml  pom.xml
org.hawk.bpmn.feature/: feature.xml  pom.xml
org.hawk.core/: .project  plugin.xml  pom-plain.xml  pom.xml
org.hawk.core.dependencies/: .classpath  build.properties  pom.xml
org.hawk.core.feature/: feature.xml  pom.xml
org.hawk.emc.dt/: .project  plugin.xml
org.hawk.emf/: .project  plugin.xml  pom-plain.xml  pom.xml
org.hawk.emf.feature/: .project  feature.xml  pom.xml
org.hawk.emfresource/: .classpath  .project  build.properties  pom-plain.xml  pom.xml
org.hawk.emfresource.feature/: feature.xml  pom.xml
org.hawk.epsilon/: .project  plugin.xml  pom-plain.xml  pom.xml
org.hawk.epsilon.feature/: .project  feature.xml  pom.xml
org.hawk.epsilon.queryaware/: plugin.xml
org.hawk.git/: .project  plugin.xml  pom-plain.xml  pom.xml
org.hawk.git.feature/: feature.xml  pom.xml
org.hawk.graph/: .project  pom.xml  (+2 more)
(+3031 files in other folders)
